--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "pg": "^8.16.3",
     "react": "19.2.0",
